@@ -1,6 +1,10 @@
 ChangeLog for RQL
 =================
 
+	--
+    * enhanced Select.replace method
+    * rql st checker now checks function avaibility according to backend (if specified)
+
 2010-06-11  --  0.26.2
     * totally remove 'IS' operator
 
